# AsioChatBackend

./: .gitignore  CMakeLists.txt  README.md  app.example.cfg  config.example.json
cmake/: Dependencies.cmake  ThirdPartyTargets.cmake  ThirdPartyTargetsLinux.cmake  ThirdPartyTargetsWindows.cmake
include/asiochat/client/: chat_client.hpp
include/asiochat/common/: protocol.hpp
include/asiochat/server/: app_config.hpp  blocking_queue.hpp  business_executor.hpp  chat_room.hpp  chat_server.hpp  chat_session.hpp  mysql_config.hpp  mysql_connection_pool.hpp  mysql_offline_message_dao.hpp  mysql_user_dao.hpp  mysql_user_store.hpp  offline_message_store.hpp  online_status_store.hpp  redis_config.hpp  redis_connection_pool.hpp  room_ai_agent_service.hpp  singleton.hpp  store_factory.hpp  thread_pool.hpp  user_store.hpp
src/client/: chat_client.cpp  main.cpp
src/common/: boost_json_impl.cpp  protocol.cpp  protocol.hpp
src/server/: app_config.cpp  app_config.hpp  blocking_queue.hpp  business_executor.cpp  business_executor.hpp  chat_room.cpp  chat_room.hpp  chat_server.cpp  chat_server.hpp  chat_session.cpp  chat_session.hpp  main.cpp  mysql_connection_pool.cpp  mysql_offline_message_dao.cpp  mysql_user_dao.cpp  mysql_user_store.cpp  offline_message_store.cpp  offline_message_store.hpp  online_status_store.cpp  online_status_store.hpp  redis_connection_pool.cpp  room_ai_agent_service.cpp  room_ai_agent_service.hpp  singleton.hpp  store_factory.cpp  store_factory.hpp  thread_pool.cpp  thread_pool.hpp
